# oracle-forge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  litellm_config.yaml  pyproject.toml
agent/: AGENT.md  Dockerfile  MCP tools.yaml  conftest.py  context_manager.py  oracle_agent.py  pytest.ini  requirements.txt  run_benchmark.py
eval/: query_traces.jsonl  run_eval.py  score.py  score_log.jsonl
kb/: README.md
kb/architecture/: CHANGELOG.md  claude_code_memory.md  context_layers.md  memory_system.md  openai_data_agent.md  tool_design.md
kb/corrections/: CHANGELOG.md  corrections_log.md
kb/domain/: CHANGELOG.md  join_keys.md  schemas.md  terminology.md  unstructured_fields.md
kb/evaluation/: CHANGELOG.md  dab_scoring.md
mcp/: Dockerfile  requirements.txt  server.py
mcp/config/: claude_desktop_config.json
patches/: apply_patches.sh  dab_runtime_fixes.patch
patches/common_scaffold/: DataAgent.py
patches/common_scaffold/tools/: LocalExecTool.py
patches/common_scaffold/tools/db_utils/: mongo_utils.py
planning/: inception_v1.md
probes/: probes.md
results/: benchmark_results.json  submission.json
signal/: community_log.md  engagement_log.md
utils/: README.md  join_key_resolver.py  multi_pass_retrieval.py  schema_introspection.py
utils/tests/: conftest.py  test_benchmark_scoring.py  test_context_manager.py  test_join_key_resolver.py  test_multi_pass_retrieval.py  test_schema_introspection.py
